k8s/smart-dinings-client-menu/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-dinings-client-menu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-dinings-frontend-client
  template:
    metadata:
      labels:
        app: smart-dinings-frontend-client
    spec:
      containers:
      - name: smart-dinings-frontend-client
        image: bogdansolga/smart-dinings-client-menu:4cdc8ce
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
