k8s/smart-dinings-client-menu/service.yml
apiVersion: v1
kind: Service
metadata:
  name: smart-dinings-client-menu
spec:
  selector:
    app: smart-dinings-client-menu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
