k8s/smart-dinings-client-menu/ingress-client-menu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-dinings-client-menu-ingress
  namespace: smart-dinings
  annotations:
    spec.ingressClassName: traefik
spec:
  rules:
    - host: client-menu.pre.smartdinings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-dinings-client-menu
                port:
                  number: 80
